--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,7 @@
     "eject": "react-scripts eject"
   },
   "engines": {
-    "node": "16.x"
+    "node": "16"
   },  
   "eslintConfig": {
     "extends": [
